cudaq/test/Transforms/device_call_realtime_errors.qke
// ========================================================================== //
// Copyright (c) 2022 - 2026 NVIDIA Corporation & Affiliates.                 //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt -verify-diagnostics -pass-pipeline='builtin.module(distributed-device-call{realtime=1})' %s

func.func @pointerLengthKernel(%arg0: !cc.ptr<i32>, %arg1: i64, %arg2: i32) -> i32 attributes {"cudaq-entrypoint", "cudaq-kernel", no_this} {
  // expected-error @+1 {{'cc.device_call' op realtime device_call lowering does not support raw pointer arguments}}
  %0 = cc.device_call @sumIntArray(%arg0, %arg1, %arg2) : (!cc.ptr<i32>, i64, i32) -> i32
  return %0 : i32
}

func.func private @sumIntArray(!cc.ptr<i32>, i64, i32) -> i32 attributes {"cudaq-devicecall"}
